--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import '@tailwindcss/typography';
 
 @custom-variant dark (&:is(.dark *));
+
+
 
 @theme inline {
   --color-background: var(--background);
